--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -176,16 +176,17 @@ add_dependencies(WalletService version)
 add_dependencies(zedwallet version)
 
 # Finally build the binaries
-set_property(TARGET TurtleCoind PROPERTY OUTPUT_NAME "TurtleCoind")
-set_property(TARGET zedwallet PROPERTY OUTPUT_NAME "zedwallet")
-set_property(TARGET zedwallet++ PROPERTY OUTPUT_NAME "zedwallet-beta")
-set_property(TARGET WalletService PROPERTY OUTPUT_NAME "turtle-service")
+set_property(TARGET TurtleCoind PROPERTY OUTPUT_NAME "SastoCoind")
+set_property(TARGET zedwallet PROPERTY OUTPUT_NAME "sastowallet")
+set_property(TARGET zedwallet++ PROPERTY OUTPUT_NAME "sastowallet-beta")
+set_property(TARGET WalletService PROPERTY OUTPUT_NAME "sasto-service")
 set_property(TARGET miner PROPERTY OUTPUT_NAME "miner")
 set_property(TARGET cryptotest PROPERTY OUTPUT_NAME "cryptotest")
 set_property(TARGET WalletApi PROPERTY OUTPUT_NAME "wallet-api")
 
 # Additional make targets, can be used to build a subset of the targets
-# e.g. make pool will build only TurtleCoind and service
-add_custom_target(pool DEPENDS TurtleCoind WalletService)
-add_custom_target(solominer DEPENDS TurtleCoind zedwallet miner)
-add_custom_target(cli DEPENDS TurtleCoind zedwallet)
+# e.g. make pool will build only SastoCoind and service
+add_custom_target(pool DEPENDS SastoCoind WalletService)
+add_custom_target(solominer DEPENDS SastoCoind sastowallet miner)
+add_custom_target(cli DEPENDS SastoCoind sastowallet)
+
