--- a/src/config/version.h.in
+++ b/src/config/version.h.in
@@ -3,7 +3,7 @@
 
 #define PROJECT_NAME "TurtleCoin"
 #define PROJECT_SITE "http://www.turtlecoin.lol"
-#define PROJECT_COPYRIGHT "Copyright 2018-2019, The TurtleCoin Developers"
+#define PROJECT_COPYRIGHT "Copyright 2019, The Sastoramro Developers"
 #define APP_VER_MAJOR 0
 #define APP_VER_MINOR 14
 #define APP_VER_REV 6
